Archive2/bc/f4fe8f49323d92/output
main.cpp: In function 'int main()':
main.cpp:9:8: error: 'STD::STRING' is not a class member
     a->STD::STRING~STD::STRING();
        ^
