Archive2/bc/f4fe8f49323d92/main.cpp
#include <iostream>

namespace STD {
class STRING {};
}

int main() {
    STD::STRING* a = new STD::STRING();
    a->STD::STRING~STD::STRING();
}